--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </main>
 
   <section class="solid-section">
-    <h2>Projects</h2>
-    <p>More content scrolls here.</p>
+    <h2>Lorem</h2>
+    <p>ipsum</p>
   </section>
 
-  <script type="module" src="main.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 </html>
