--- a/index.html
+++ b/index.html
@@ -11,13 +11,31 @@
   <div id="app"></div>
 
   <main class="content">
-    <h1>Laura Laura</h1>
-    <p>Lorem ipsum</p>
+    <h1>NITU by Baltic Data</h1>
+    <br>
+    <p>NITU ir Latvijā radīti Gaming un Professional datori, kas izstrādāti ar dizainu pirmajā vietā. Ražojam uz vietas un piedāvājam atbalstu 24/7. Izvēlies mūs, lai.
+      <br><br>Atklāj kategorijas Gaming Professional un Individual zemāk</p>
+    </p>
   </main>
 
-  <section class="solid-section">
-    <h2>Lorem</h2>
-    <p>ipsum</p>
+  <section class="section">
+
+
+    <div class="card_ctn">
+      <div class="card" id="card1">
+        <div class="pic" id="pic1"></div>
+        <div class="card_txt">pdkfkk</div>
+      </div>
+      <div class="card" id="card2">
+         <div class="pic" id="pic2"></div>
+        <div class="card_txt">pdkfkk</div>
+      </div>
+      <div class="card" id="card3">
+         <div class="pic" id="pic3"></div>
+        <div class="card_txt">pdkfkk</div>
+      </div>
+    </div>
+
   </section>
 
   <script type="module" src="./main.js"></script>
